--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,17 @@ nbproject
 .vscode
 .node_history
 dump.rdb
+
+# Environments
 .env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+dtb_venv/
+
 
 npm-debug.log
 lib-cov
